<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_azul"
    tools:context=".Cliente.DetalleReceta_cliente">

    <RelativeLayout
        android:id="@+id/toobarRLDetalle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageButton
            android:id="@+id/Ib_volver"
            android:src="@drawable/ic_volver"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/Txt_DetalleReceta_cliente"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View

            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_below="@id/toobarRLDetalle"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Txt_Titulo_DetalleReceta_cliente"
            android:text="@string/Txt_Titulo_DetalleReceta_cliente"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <RelativeLayout

            android:id="@+id/RLImg_Receta"
            android:layout_marginTop="10dp"
            android:layout_below="@id/Txt_Titulo_DetalleReceta_cliente"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="200dp">


            <!--aqui entra la imagen de firebase-->
            <androidx.appcompat.widget.AppCompatImageView

                android:layout_marginTop="10dp"
                android:id="@+id/ic_receta_item"
                android:src="@drawable/ic_receta_item"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/Txt_Categoria_DetalleReceta_cliente"
                android:text="@string/Txt_Categoria_DetalleReceta_cliente"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ic_receta_item"
                android:maxLines="1"
                android:layout_width="100dp"
                android:layout_height="20dp"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/Txt_Ingredientes_DetalleReceta_cliente"
            android:text="@string/Txt_Ingredientes_DetalleReceta_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/descricion_D_cliente"
            android:text="@string/descricion_D_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>