<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.Registro_Cliente">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbarRLCliente"
        android:layout_height="@dimen/toolbar_height">

        <ImageButton
            android:id="@+id/Ib_volver"
            android:src="@drawable/ic_volver"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtRegistrarCliente"
            android:text="@string/txtRegistrarCliente"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="#cccccc"
            android:layout_height="1dp"/>"


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RLDatosCliente"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbarRLCliente"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"

            android:orientation="vertical"
            android:layout_height="wrap_content">

            <!--Nombres-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Etext_nombresCL"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/Etext_nombresCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomStart="8dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Etext_emailCL"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Etext_emailCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Etext_passwordCL"
                    android:inputType="textPassword"
                    android:hint="@string/Etext_passwordCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!--repetir password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Etext_repetir_passwordCL"
                    android:hint="@string/Etext_repetir_passwordCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:id="@+id/Btn_Regi_cliente"
                android:textAllCaps="true"
                android:backgroundTint="@color/boton1"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/Btn_Regi_cliente"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/Txt_cuenta_existente"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Txt_cuenta_existente"/>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </RelativeLayout>

</RelativeLayout>