<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_azul"

    tools:context=".Administrator.Agregar_Catego">

    <RelativeLayout
        android:id="@+id/toolbarRLAgregar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <ImageButton
            android:id="@+id/Ib_volver"
            android:src="@drawable/ic_volver"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/txt_agregarCate"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:background="#ccc"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"/>


    </RelativeLayout>

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/toolbarRLAgregar"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <EditText
            android:id="@+id/EText_Categoria"
            android:inputType="textPersonName|textCapSentences"
            android:drawableStart="@drawable/icon_category"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:hint="@string/EText_Categoria"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Agregar_Cate_BaseDatos"
            android:text="@string/Agregar_Cate_BaseDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

        </com.google.android.material.button.MaterialButton>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>