<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_azul"

    tools:context=".Cliente.Login_cliente">

    <RelativeLayout
        android:id="@+id/toolbarRLClienteL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageButton
            android:id="@+id/Ib_volver"
            android:src="@drawable/ic_volver"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:color/transparent"/>
        <TextView
            android:text="@string/LoginCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRLClienteL"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">'

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <!--email-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/Etext_emailCL"
                    android:hint="@string/Etext_emailCL"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--clave-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/Etext_passwordCL"
                    android:hint="@string/Etext_passwordCL"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:id="@+id/Btn_LoginCliente"
                android:text="@string/Btn_LoginCliente"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textAllCaps="true"
                android:backgroundTint="@color/boton1"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>



</RelativeLayout>